# BachelorPro

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Tests.cpp  settings.hpp  using_git.md
AnalytGrasp/: AnalytGrasp.cpp  AnalytGrasp.hpp
AnalytGrasp/src/: AnalytGrasp.cpp  AnalytGrasp.hpp
Coords/src/: Coords.cpp  Coords.hpp
SDHControl/src/: SDHControl.cpp  SDHControl.hpp
SDHControl/tests/CustHeight/: CMakeCache.txt  CMakeLists.txt  CustHeight.cpp  Makefile  cmake_install.cmake  robwork-release-0.7.0.cfg.xml
SDHControl/tests/MathTest/: CMakeCache.txt  CMakeLists.txt  Makefile  MathTest.cpp  cmake_install.cmake
SDHControl/tests/PostionTest/: CMakeLists.txt  PostionTest.cpp
SDHControl/tests/SDHControlTest/: CMakeCache.txt  CMakeLists.txt  Makefile  SDHControlTest.cpp  cmake_install.cmake
SDHControl/tests/SDHEvaluateGrasp/: CMakeLists.txt  SDHEvaluateGrasp.cpp
SDHControl/tests/SDHQTest/: CMakeLists.txt  SDHQTest.cpp  robwork-release-0.7.0.cfg.xml
SDHControl/tests/TwoFingerTest/: CMakeLists.txt  TwoFingerTest.cpp  rmCmakeFiles.sh
TIAFC/src/: TIAFC.cpp  TIAFC.hpp
TIAFC/test/: source.cpp
Tests/ArmCamHandTest /: ArmCamHandTest.cpp  CMakeLists.txt  goToHome.txt  goToInit.txt  moveRelScript0.txt  robwork-release-0.7.0.cfg.xml
Tests/ArmCamTest/: CMakeLists.txt  moveRelScript0.txt  robwork-release-0.7.0.cfg.xml  source.cpp
Tests/CustGraspHeight/: CMakeCache.txt  CMakeLists.txt  CustGraspHeight.cpp  Makefile  cmake_install.cmake
Tests/GraspControlTest/: CMakeLists.txt  GraspControlTest.cpp  goToInit.txt  moveRelScript.txt  robwork-release-0.7.0.cfg.xml
Tests/PreGraspTest/: CMakeLists.txt  PreGraspTest.cpp  goToInit.txt  moveRelScript.txt  robwork-release-0.7.0.cfg.xml
Tests/RobWorkWorkCell/: CMakeLists.txt  RobWorkTest  RobWorkTest.cpp
Tests/RobWorkWorkCell/XMLtest/: Workcell.xml
Tests/RobWorkWorkCell/path_animation/: SDH_home_init  UR_home_to_Init
Tests/VisionTest/: CMakeLists.txt  source  source.cpp
URControl/src/: URControl.cpp  URControl.hpp  goToInit.txt
URControl/tests/URControlTest/: CMakeCache.txt  CMakeLists.txt  Makefile  URControlTest.cpp  cmake_install.cmake
URControl/tests/URPrecTest/: CMakeLists.txt  URPrecTest.cpp  goToInit.txt  moveRelScript0.txt
URControl/tests/WristRotateTest/: CMakeLists.txt  WristRotateTest.cpp  rotateWristScript.txt
URControl/tests/goToInitExample/: CMakeLists.txt  goToInit_example.cpp
URControl/tests/pIntTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  goToInitThenHome.txt  pIntTest.cpp
Vision/src/: Vision.cpp  Vision.hpp
